--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,5 @@
-AUTHORS
+# This file lists all contributors to the simple shell project
 
-Nnachi Amah [@amah-nnachi-lofty](https://github.com/amah-nnachi-lofty)
+Nnachi Amah <loftdot@gmail.com>
 
-David Pare [@laopanpare@protonmail.com](https://github.com/LAOPAN-sudo)
-
-
-You can initialize and clone this repository. [visit](https://github.com/amah-nnachi-lofty/simple_shell/import)
-
-
+Pare Laopan David <laopanpare@protonmail.com>
